Changes to the packag.json and index.html files

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -341,7 +341,7 @@
             // https://twitchapps.com/tmi/
             //
 
-            ComfyJS.Init( "fboucheros", authToken );
+            ComfyJS.Init( "jhandtv", authToken );
             
           </script>
     </body>
